--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="utf-8">
 <title>A.P.J.Abdul Kalam - Tribute page</title>
-<link rel="stylesheet" href="tribute.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <main id="main">
